app/assets/stylesheets/application.css
/* ... */
.nav-arrow:hover {
  border: 2px white solid;
}

#scroll-left-button {
}

#scroll-right-button {
}

/*=======================SLIDEBAR======================*/


.panda-logo {
  width: 80px;
  height: auto;
}

#pandapop-playlists {
  width: 80%;
  margin-right: auto;
  margin-left: auto;
  white-space: nowrap;
  overflow-x: scroll;
}

#playlists-welcome {
  font-size: 2em;
}

article.pandapop-playlist-item {
  width: 150px;
  display: inline-block;
  border: 1px black solid;
  padding: 5px;
  margin: 15px;
  font-size: 1em;
  text-align: center;
}

article.pandapop-playlist-item a {
  text-decoration: none;
}

#user-avatar {
  width: 200px;
  height: 200px;
  display: block;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 50%;
  border:5px solid gray;
}

.sidebar-button {
  width: 100%;
  text-align: center;
  border-bottom: 2px gray solid;
  font-family: 'PT Sans', sans-serif;
  color: white;
  font-size: 1.3em;
  padding-top: 0.8em;
  padding-bottom: 0.8em;
}

#top-button {
  border-top: 2px gray solid;
}

#slidebar-edit-icon {
  height: 15px;
  width: 15px;
  padding-left: 4px;
}

.sidebar-button:hover {
  background-color: #545454;
  border-left: 7px #ff358b solid;
}

#sidebar-button-area {
  margin-top: 30px;
}

h1 {
  font-family: 'PT Sans', sans-serif;
}

h1#username {
  font-size: 1.6em;
  color: #ff358b;
  text-align: center;
  margin-top: 0.5em;
}

#slidebar-edit-icon {
  height: 15px;
  width: 15px;
  display: inline;
}

h2 {
  font-family: 'PT Sans', sans-serif;
}

#panda-mascot {
  width: 60px;
  display: block;
  margin-top: 10px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
}

.about-link {
  width: 80px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  font-family: 'Exo 2', sans-serif;
  font-size: 20px;
  color: white;
}

/*=======================LANDING PAGE=========================*/

#readymade-playlists-container {
  position: relative;
  height: 620px;
  width: 1090px;
  margin-top: 7px;
  padding: 0px;
}

.readymade-item-container {
  cursor: pointer;
  position: relative;
  display: inline-block;
  width: 49.25%;
  height: 49.25%;
  background-color: #FFF;
  margin-top: 3px;
}

.readymade-image {
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 500;

}

.readymade-image:hover {
  opacity: 1.0;
}

.readymade-header {
  position: relative;
  font-size: 30px;
  font-weight: bold;
  color: white;
  font-family: 'PT Sans', sans-serif;
  padding: 15px;
  width: auto;
  background-color: rgba(0,0,0,0.7);
  height: auto;
  z-index: 1000;
  top: 70%;
}

/*=======================ADD TO PLAYLIST POPUP=========================*/


.playlists-popup {
  display:none;
/*  height:200px;
  width:200px;*/
  padding-top: 0px;
  max-height: 179px;
  overflow: scroll;
  /*background-color: #353535;*/
  position: absolute;
  float: left;
  z-index: 10000;
}

.playlist-popup-item {
  background-color: #5f5f5f;
/*  margin-top: 1px;
  margin-bottom: 1px;*/
  width: 310px;
  height: 30px;
  font-family: 'PT Sans', sans-serif;
  font-size: 20px;
  padding: 5px;
  z-index: 90000;
  border-bottom: 2px solid gray;
}

.playlist-popup-item:hover {
  background-color: gray;
}

/*=======================INNER GRID=========================*/

.inner-grid {
  width: 99%;
  height: 99%;
  background-color: #474747;
  margin-top: 0.5%;
/*  padding-top: 10px;
  padding-bottom: 10px;*/
}

.inner-grid-left {
  width: 35%;
  height: 100%;
  float:left; /* add this */
  background-color: #353535;
  margin-right: 10px;
  margin-left: 10px;
}

.inner-grid-right {
  width: 62%;
  height: 100%;
  float: left;
  background-color: #212121;
  margin-right: 10px;
}

.playlist-button {
  width: 100%;
  text-align: left;
  border-bottom: 2px gray solid;
  font-family: 'PT Sans', sans-serif;
  color: white;
  font-size: 1.3em;
  padding-top: 0.8em;
  padding-bottom: 1.2em;
}

.playlist-button:hover {
  background-color: #545454;
  border-left: 7px #ff358b solid;
  width: 99%;
}

.playlist-button img {
  height: 30px;
  padding-left: 20px;
  padding-right: 20px;
}

#new-playlist-button {
  width: 100%;
  height: 50px;
  text-align: left;
  border-bottom: 2px gray solid;
  font-family: 'PT Sans', sans-serif;
  color: white;
  font-size: 1.3em;
  padding-top: 0.8em;
  padding-bottom: 0.8em;
}

.playlist-button .playlist_follow_link {
  color: rgb(255, 52, 139) ;
  float: right;
  margin-right: 20px;
  margin-top: 14px;
}

#track-title {
  width: 100%;
  height: 55px;
  border-bottom: 2px gray solid;
  font-family: 'PT Sans', sans-serif;
  color: white;
  font-size: 1.3em;
  text-align: left;
}

.track-title-value {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 10px;
  margin-right: 10px;
}

#track-title img {
  float: left;
}

#track-title > img:nth-of-type(2){
  float: right;
  padding-right: 10px;
}

#track-title > p:first-of-type {
  /*color: blue;*/
  width: 60%;
  float: left;
  padding-left: 15px;
  padding-top: 18px;
  padding-bottom: 12px;
}

#track-title > p:nth-of-type(2) {
  /*color: red;*/
  width: auto;
  float: left;
  padding-top: 18px;
  padding-bottom: 12px;
}

/*=======================ABOUT US========================*/

#about-elements-container {
  position: relative;
  height: auto;
  min-width: 1250px;
  width: auto;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2%;
}

.about-us-container {
  position: relative;
  display: inline-block;
  height: 300px;
  width: 450px;
  margin-top: 0.25%;
  margin-bottom: 0.25%;
}

.about-us-image {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
}
/* ... */

